# blackbox-startup-decision-engine

./: .gitignore  graph.py  main.py  pyproject.toml  readme.md  requirements.txt
agents/: arbiter.py  business_eval.py  generator.py  market_eval.py  technical_eval.py  workflow_gate.py
core/: context.py  logger.py  prompts.py  state.py
llm/: base.py  factory.py  mock_llm.py  openai_llm.py
prompts/: business.txt  business_eval.txt  generator.txt  market.txt  market_eval.txt  technical.txt  technical_eval.txt  workflow_gate.txt
tests/: calibration_set.json  test_arbiter.py  test_mock_llm.py  test_state_updates.py  verify_calibration.py
