[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blackbox-engine"
version = "0.1.0"
description = "Adversarial Micro-SaaS Discovery Engine"
requires-python = ">=3.10"
dependencies = [
    "langchain-core",
    "langgraph",
    "openai",
    "pydantic"
]

[tool.setuptools]
packages = ["core", "agents", "llm"]
